pacman/Deployment-pacman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman
  name: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
        name: pacman
  template:
    metadata:
      labels:
        name: pacman
    spec:
      containers:
      - image: yassinemaachi/pacman-nodejs-app:latest
        name: pacman
        ports:
        - containerPort: 8080
          name: http-server
